--- a/projects/amen/views/mapping/lab-results/index.html
+++ b/projects/amen/views/mapping/lab-results/index.html
@@ -1,90 +1,126 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
-  <base href="../../../../../">
-  <!-- css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style/master.min.css">
-  <style>
-    body {
-      opacity: 0;
-      -webkit-transition: opacity 1s ease-in;
-      -moz-transition: opacity 1s ease-in;
-      -ms-transition: opacity 1s ease-in;
-      -o-transition: opacity 1s ease-in;
-      transition: opacity 1s ease-in;
-    }
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
+    <title>AMEN Lab Results Mapping Skunk Works | TigerConnect</title>
+    <base href="../../../../../">
+    <!-- css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+          integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/master.min.css">
+    <style>
+      body {
+        opacity: 0;
+        -webkit-transition: opacity 1s ease-in;
+        -moz-transition: opacity 1s ease-in;
+        -ms-transition: opacity 1s ease-in;
+        -o-transition: opacity 1s ease-in;
+        transition: opacity 1s ease-in;
+      }
 
-    body.visible {
-      opacity: 1;
-    }
-  </style>
-</head>
+      body.visible {
+        opacity: 1;
+      }
+    </style>
+  </head>
 
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
-        <li><a href="projects/amen/views/mapping/index.html">Mapping</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <article>
-      <h1>Lab Results Mapping</h1>
-    </article>
-  </main>
-  <footer>
-    <form class="color-mode">
-      <fieldset class="toggle">
-        <label for="switch-theme">
-          <span class="light-mode">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-sun">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
-              <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
-            </svg>
-          </span>
-          <input type="checkbox" id="switch-theme" class="toggle" name="switch-theme" title="switch-theme">
-          <span class="dark-mode">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-              class="icon icon-tabler icons-tabler-outline icon-tabler-moon">
-              <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-              <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
-            </svg>
-          </span>
-        </label>
-      </fieldset>
-    </form>
-  </footer>
-  <!-- scripts -->
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="projects/amen/assets/scripts/site.js"></script>
-  <script src="assets/scripts/headroom.js"></script>
-  <script>
-    // CHANGE CSS WHEN PAGE LOADS
-    $(document).ready(function () {
-      $("body").addClass("visible");
-      $("body").removeClass("hidden");
-    });
-    // HEADROOM
-    var myElement = document.querySelector("header");
-    var headroom = new Headroom(myElement);
-    headroom.init();
-  </script>
-</body>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="projects/amen/views/dashboard/index.html">Dashboard</a></li>
+          <li><a href="projects/amen/views/mapping/index.html">Mapping</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <article>
+        <h1>Lab Results Mapping</h1>
+        <div class="row cards">
+          <div class="card">
+            <h2>Entities</h2>
+            <p>Control which entities are communicated to the system.</p>
+            <form id="yale-lab-results">
+              <fieldset class="toggle checklist">
+                <!-- <legend>
+                  <div class="button-group right">
+                    <button id="entities-none" class="tertiary">None</button>
+                    <button id="entities-all" class="tertiary">All</button>
+                  </div>
+                </legend> -->
+                <label for="yale-lab-result-result-id">Result ID <input type="checkbox" id="yale-lab-result-result-id" class="toggle" name="yale-lab-result-result-id" title="Result ID" value="Result ID" checked></label>
+                <label for="yale-lab-result-observation-timestamp">Observation Timestamp <input type="checkbox" id="yale-lab-result-observation-timestamp" class="toggle" name="yale-lab-result-observation-timestamp" title="Observation Timestamp" value="Observation Timestamp" checked></label>
+                <label for="yale-lab-result-observation-id">Observation ID <input type="checkbox" id="yale-lab-result-observation-id" class="toggle" name="yale-lab-result-observation-id" title="Observation ID" value="Observation ID" checked></label>
+                <label for="yale-lab-result-observation-sub-id">Observation Sub ID <input type="checkbox" id="yale-lab-result-observation-sub-id" class="toggle" name="yale-lab-result-observation-sub-id" title="Observation Sub ID" value="Observation Sub ID" checked></label>
+                <label for="yale-lab-result-observation-request-id">Observation Request ID <input type="checkbox" id="yale-lab-result-observation-request-id" class="toggle" name="yale-lab-result-observation-request-id" title="Observation Request ID" value="Observation Request ID" checked></label>
+                <label for="yale-lab-result-specimen-id">Specimen ID <input type="checkbox" id="yale-lab-result-specimen-id" class="toggle" name="yale-lab-result-specimen-id" title="Specimen ID" value="Specimen ID" checked></label>
+                <label for="yale-lab-result-observation-result-status">Observation Result Status <input type="checkbox" id="yale-lab-result-observation-result-status" class="toggle" name="yale-lab-result-observation-result-status" title="Observation Result Status" value="Observation Result Status" checked></label>
+                <label for="yale-lab-result-observation-value">Observation Value <input type="checkbox" id="yale-lab-result-observation-value" class="toggle" name="yale-lab-result-observation-value" title="Observation Value" value="Observation Value" checked></label>
+                <label for="yale-lab-result-references-range">References Range <input type="checkbox" id="yale-lab-result-references-range" class="toggle" name="yale-lab-result-references-range" title="References Range" value="References Range"></label>
+                <label for="yale-lab-result-units">Units <input type="checkbox" id="yale-lab-result-units" class="toggle" name="yale-lab-result-units" title="Units" value="Units" checked></label>
+                <label for="yale-lab-result-value-type">Value Type <input type="checkbox" id="yale-lab-result-value-type" class="toggle" name="yale-lab-result-value-type" title="Value Type" value="Value Type" checked></label>
+                <label for="yale-lab-result-priority">Priority <input type="checkbox" id="yale-lab-result-priority" class="toggle" name="yale-lab-result-priority" title="Priority" value="Priority"></label>
+                <label for="yale-lab-result-resulted-test">Resulted Test <input type="checkbox" id="yale-lab-result-resulted-test" class="toggle" name="yale-lab-result-resulted-test" title="Resulted Test" value="Resulted Test"></label>
+                <label for="yale-lab-result-result">Result <input type="checkbox" id="yale-lab-result-result" class="toggle" name="yale-lab-result-result" title="Result" value="Result" checked></label>
+                <label for="yale-lab-result-ordering-provider-id">Ordering Provider ID <input type="checkbox" id="yale-lab-result-ordering-provider-id" class="toggle" name="yale-lab-result-ordering-provider-id" title="Ordering Provider ID" value="Ordering Provider ID" checked></label>
+                <label for="yale-lab-result-patient-id">Patient ID <input type="checkbox" id="yale-lab-result-patient-id" class="toggle" name="yale-lab-result-patient-id" title="Patient ID" value="Patient ID" checked></label>
+                <label for="yale-lab-result-location-id">Location ID <input type="checkbox" id="yale-lab-result-location-id" class="toggle" name="yale-lab-result-location-id" title="Location ID" value="Location ID" checked></label>
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+                <!-- <label for=""> <input type="checkbox" id="" class="toggle" name="" title="" value="" checked></label> -->
+              </fieldset>
+            </form>
+          </div>
+        </div>
+      </article>
+    </main>
+    <footer>
+      <form class="color-mode">
+        <fieldset class="toggle">
+          <label for="switch-theme">
+            <span class="light-mode">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                   class="icon icon-tabler icons-tabler-outline icon-tabler-sun">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0" />
+                <path d="M3 12h1m8 -9v1m8 8h1m-9 8v1m-6.4 -15.4l.7 .7m12.1 -.7l-.7 .7m0 11.4l.7 .7m-12.1 -.7l-.7 .7" />
+              </svg>
+            </span>
+            <input type="checkbox" id="switch-theme" class="toggle" name="switch-theme" title="switch-theme">
+            <span class="dark-mode">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                   stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                   class="icon icon-tabler icons-tabler-outline icon-tabler-moon">
+                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                <path d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z" />
+              </svg>
+            </span>
+          </label>
+        </fieldset>
+      </form>
+    </footer>
+    <!-- scripts -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="projects/amen/assets/scripts/site.js"></script>
+    <script src="assets/scripts/headroom.js"></script>
+    <script>
+      // CHANGE CSS WHEN PAGE LOADS
+      $(document).ready(function () {
+        $("body").addClass("visible");
+        $("body").removeClass("hidden");
+      });
+      // HEADROOM
+      var myElement = document.querySelector("header");
+      var headroom = new Headroom(myElement);
+      headroom.init();
+    </script>
+  </body>
 
 </html>
