--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -69,6 +69,27 @@
                   <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
+              <li id="yale-medical-center-provider-entity">Provider
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <!-- <button class="tertiary" disabled>Edit</button> -->
+                </span>
+              </li>
               <li id="yale-medical-center-caregiver-entity">Caregiver
                 <span class="action">
                   <span class="status valid">
