--- a/components/tabs.html
+++ b/components/tabs.html
@@ -46,15 +46,9 @@
         <div class="tabs">
           <div class="tablist" role="tablist" aria-multiselectable="false">
             <ul>
-              <li class="tab-item" role="presentation">
-                <button class="tab-trigger is-active" id="tab-label-1" role="tab" aria-controls="tab-panel-1" aria-selected="true">Tab 1</button>
-              </li>
-              <li class="tab-item" role="presentation">
-                <button class="tab-trigger" id="tab-label-2" role="tab" aria-controls="tab-panel-2" aria-selected="false">Tab 2</button>
-              </li>
-              <li class="tab-item" role="presentation">
-                <button class="tab-trigger" id="tab-label-3" role="tab" aria-controls="tab-panel-3" aria-selected="false">Tab 3</button>
-              </li>
+              <li class="tab-item" role="presentation"><button class="tab-trigger is-active" id="tab-label-1" role="tab" aria-controls="tab-panel-1" aria-selected="true">Tab 1</button></li>
+              <li class="tab-item" role="presentation"><button class="tab-trigger" id="tab-label-2" role="tab" aria-controls="tab-panel-2" aria-selected="false">Tab 2</button></li>
+              <li class="tab-item" role="presentation"><button class="tab-trigger" id="tab-label-3" role="tab" aria-controls="tab-panel-3" aria-selected="false">Tab 3</button></li>
             </ul>
           </div>
           <div class="panels">
@@ -116,24 +110,9 @@
     var headroom = new Headroom(myElement);
     headroom.init();
     // TABS
-    $("li.tab-item button#tab-label-1").click(function() {
-      $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false);
-      $("li.tab-item button#tab-label-1").addClass("is-active").attr("aria-selected", true);
-      $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true);
-      $(".panels .panel#tab-panel-1").addClass("is-current").attr("aria-hidden", false);
-    });
-    $("li.tab-item button#tab-label-2").click(function() {
-      $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false);
-      $("li.tab-item button#tab-label-2").addClass("is-active").attr("aria-selected", true);
-      $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true);
-      $(".panels .panel#tab-panel-2").addClass("is-current").attr("aria-hidden", false);
-    });
-    $("li.tab-item button#tab-label-3").click(function() {
-      $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false);
-      $("li.tab-item button#tab-label-3").addClass("is-active").attr("aria-selected", true);
-      $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true);
-      $(".panels .panel#tab-panel-3").addClass("is-current").attr("aria-hidden", false);
-    });
+    $("li.tab-item button#tab-label-1").click(function() { $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false); $("li.tab-item button#tab-label-1").addClass("is-active").attr("aria-selected", true); $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true); $(".panels .panel#tab-panel-1").addClass("is-current").attr("aria-hidden", false); });
+    $("li.tab-item button#tab-label-2").click(function() { $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false); $("li.tab-item button#tab-label-2").addClass("is-active").attr("aria-selected", true); $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true); $(".panels .panel#tab-panel-2").addClass("is-current").attr("aria-hidden", false); });
+    $("li.tab-item button#tab-label-3").click(function() { $("li.tab-item button.is-active").removeClass("is-active").attr("aria-selected", false); $("li.tab-item button#tab-label-3").addClass("is-active").attr("aria-selected", true); $(".panels .panel.is-current").removeClass("is-current").attr("aria-hidden", true); $(".panels .panel#tab-panel-3").addClass("is-current").attr("aria-hidden", false); });
   </script>
 </body>
 
